swen430as2/test_files/valid/unions/UnionType_Valid_11.while
type Record_1 is { int|null field } 
type Record_2 is { int field } | { null field }

Record_1 f(Record_2 r) {
    return r;
}

void main() {
    assert f({field: 1}) == {field: 1};
    assert f({field: null}) == {field: null}; 
}