swen430as2/test_files/invalid/unions/UnionType_Invalid_5-TC01.while
type Rec is {int|null field}

Rec f() {
    return {field: false};
}
